--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -1,39 +1,43 @@
 ﻿@*HOME PAGE*@
-<div id="particles-js" style="height: 900px; z-index: 0"></div>
-<div>
-    <p style="text-align: center; margin-top: 10px; color: #81cac4;">@ViewBag.LoggedOut</p>
-</div>
-<h3 class="thinHeading" id="websiteTitle">TITLE</h3>
-@*<h3 style="text-align:center; margin-top: 50px; margin-bottom: 250px; font-weight:200; font-size:30px; letter-spacing:1.5px;">RECENTLY USED TECHNOLOGIES</h3>*@
 
-<div id="skillsContainer" class="container center-div z-depth-5">
-    <h4 class="thinHeading" style="margin-top: 10px; margin-bottom: 20px;">Recently Used Technologies</h4>
-    <ul id="tech-used" class="techBoxes">
-        <li>C#</li>
-        <li>ASP.NET MVC 5</li>
-        <li>ASP.NET Core</li>
-        <li>Web API</li>
-        <li>LINQ</li>
-        <li>Entity Framework</li>
-        <li>MS Visual Studio 2017</li>
-        <li>Microsoft SQL Server</li>
-        <li>Bootstrap</li>
-        <li>Materialize</li>
-        <li>Kendo UI</li>
-        <li>JavaScript</li>
-        <li>jQuery</li>
-        <li>JSON</li>
-        <li>Ajax</li>
-        <li>HTML/CSS</li>
-        <li>Git</li>
-        <li>Azure</li>
-    </ul>
+<div id="particles-js"></div>
+@*<div>
+        <p style="text-align: center; margin-top: 10px; color: #81cac4;">@ViewBag.LoggedOut</p>
+    </div>*@
+<div style="padding: 50px;">
+    <h3 class="thinHeading" id="websiteTitle">TITLE</h3>
+    <div id="skillsContainer" class="container center-div z-depth-5">
+        <h4 class="thinHeading flow-text" style="margin: 40px;">Recently Used Technologies</h4>
+        <ul id="tech-used" class="techBoxes">
+            <li>C#</li>
+            <li>ASP.NET MVC 5</li>
+            <li>ASP.NET Core</li>
+            <li>Web API</li>
+            <li>LINQ</li>
+            <li>Entity Framework</li>
+            <li>MS Visual Studio 2017</li>
+            <li>Microsoft SQL Server</li>
+            <li>Bootstrap</li>
+            <li>Materialize</li>
+            <li>Kendo UI</li>
+            <li>JavaScript</li>
+            <li>jQuery</li>
+            <li>JSON</li>
+            <li>Ajax</li>
+            <li>HTML/CSS</li>
+            <li>Git</li>
+            <li>Azure</li>
+        </ul>
+    </div>
 </div>
+
+
 <style>
     body {
         background-color: #020305 !important;
     }
 </style>
+
 <script src="~/js/particles.js"></script>
 
 <script type="text/javascript">
