--- a/MyWebsite/Views/Manage/ChangePassword.cshtml
+++ b/MyWebsite/Views/Manage/ChangePassword.cshtml
@@ -1,35 +1,50 @@
 ﻿@model ChangePasswordViewModel
 @{ViewData.AddActivePage(ManageNavPages.ChangePassword);}
 
-<h3 style="text-align:center; margin-top:150px; margin-bottom: 30px; font-weight:200; letter-spacing:1.5px;">CHANGE PASSWORD</h3>
-
-@Html.Partial("_StatusMessage", Model.StatusMessage)
-<div style="margin:50px 100px;">
-    <div class="row">
-        <div class="col s6">
-            <form method="post">
-                <div>
-                    <label class="textGrey"  asp-for="OldPassword"></label>
-                    <input asp-for="OldPassword" style="color: #cfd8dc" />
-                    <span asp-validation-for="OldPassword"></span>
-                </div>
-                <div>
-                    <label class="textGrey"  asp-for="NewPassword"></label>
-                    <input asp-for="NewPassword" style="color: #cfd8dc" />
-                    <span asp-validation-for="NewPassword"></span>
-                </div>
-                <div>
-                    <label class="textGrey"  asp-for="ConfirmPassword"></label>
-                    <input asp-for="ConfirmPassword" style="color: #cfd8dc" />
-                    <span asp-validation-for="ConfirmPassword"></span>
-                </div>
-                <button style="margin-top:10px;" type="submit" class="waves-effect waves-light btn sharpCorners black-btn">Update Password</button>
-            </form>
-            <div style="margin-top: 10px;">
-                <a class="hover-underline" onclick="window.history.go(-1)">Cancel</a>
+<h3 class="centerAccountText" style="margin-top:150px;">CHANGE YOUR PASSWORD</h3>
+<div><h5 style="text-align: center; margin-top: 10px; color: #81cac4;">@ViewBag.Updated</h5></div>
+<div class="row" style=" margin-top:50px;">
+    <div class="accountBox col l6 offset-l3 m10 offset-m1 s12 z-depth-4">
+        <form id="acctForm" asp-action="ChangePassword" method="post">
+            <h4 class="centerAccountText flow-text" style="margin-top:30px; margin-bottom: 30px;">Enter Your New Password</h4>
+            <div class="input-field">
+                <i class="material-icons prefix">lock</i>
+                <input asp-for="OldPassword" id="OldPassword" placeholder="Old Password" class="validate" required type="password" style="width: 85%" />
+                <label for="OldPassword">Current Password</label>
+                <p><span asp-validation-for="OldPassword" class="validate"></span></p>
             </div>
-        </div>
+            <div class="input-field" style="margin-top: 21px">
+                <i class="material-icons prefix">lock_outline</i>
+                <input asp-for="NewPassword" id="NewPassword" placeholder="New Password" class="validate" required type="password" style="width: 85%" />
+                <label for="NewPassword">New Password</label>
+                <p><span asp-validation-for="NewPassword" class="validate"></span></p>
+            </div>
+            <div class="input-field" style="margin-top: 21px">
+                <i class="material-icons prefix">lock_outline</i>
+                <input asp-for="ConfirmPassword" id="ConfirmPassword" placeholder="Confirm Password" class="validate" required type="password" style="width: 85%" />
+                <label for="ConfirmPassword">Confirm Password</label>
+                <p><span asp-validation-for="ConfirmPassword" class="validate"></span></p>
+            </div>
+            <div>
+                <p style="color: #D50000;">@ViewBag.Error</p>
+            </div>
+            @Html.HiddenFor(x => x.StatusMessage)
+            <button type="submit" id="updatePassword" class="waves-effect waves-light btn sharpCorners black-btn"><span class="far fa-save"></span> update password</button>
+            <div class="progress" style="display: none;">
+                <div class="indeterminate"></div>
+            </div>
+            <div style="margin-top: 70px;">
+                <a class="waves-effect waves-light btn sharpCorners black-btn" asp-action="Index" style="margin: 1px;"><i class="fas fa-backward" style="font-size: 15px;"></i> cancel</a>
+            </div>
+        </form>
     </div>
 </div>
 
-<div style="height:300px;"></div>
+<script>
+    $('#updatePassword').click(function () {
+        if ($('#ConfirmPassword').val() !== "" && $('#Password').val() !== "" && $('#NewPassword').val() !== "") {
+            if ($('#NewPassword').val() == $('#ConfirmPassword').val())
+                $('.progress').show();
+        } 
+    });
+</script>
