--- a/MyWebsite/Views/Account/Login.cshtml
+++ b/MyWebsite/Views/Account/Login.cshtml
@@ -11,8 +11,8 @@
                 <h4 class="centerAccountText flow-text" style="margin-top:30px; margin-bottom: 30px;">Enter Your Account Information</h4>
                 <div class="input-field">
                     <i class="material-icons prefix">person_outline</i>
-                    <input asp-for="Email" id="Email" placeholder="Username" class="validate" required type="text" style="width:85%" />
-                    <label for="Email">Username</label>
+                    <input asp-for="Email" id="Email" placeholder="Email" class="validate" required type="text" style="width:85%" />
+                    <label for="Email">Email</label>
                     <p><span asp-validation-for="Email" class="validate"></span></p>
                 </div>
                 <div class="input-field" style="margin-top: 30px;">
@@ -23,7 +23,10 @@
                 </div>
                 <div>
                     <div><p style="color: #D50000;">@ViewBag.Error</p></div>
-                    <button type="submit" class="waves-effect waves-light btn sharpCorners black-btn"><span class="fas fa-sign-in-alt"></span> log in</button>
+                    <button id="loginBtn" type="submit" class="waves-effect waves-light btn sharpCorners black-btn"><span class="fas fa-sign-in-alt"></span> log in</button>
+                </div>
+                <div class="progress" style="display: none;">
+                    <div class="indeterminate"></div>
                 </div>
                 <div style="margin-top: 70px;">
                     <a class="waves-effect waves-light btn sharpCorners black-btn" asp-action="ForgotPassword" style="margin: 1px;"><i class="fas fa-unlock-alt" style="font-size: 15px;"></i> forgot password</a>
@@ -35,3 +38,13 @@
         </section>
     </div>
 </div>
+
+<script>
+    $('#loginBtn').click(function () {
+        var emailRegex = /^[a-zA-Z0-9_.-]+@@[a-zA-Z0-9]+[a-zA-Z0-9.-]+[a-zA-Z0-9]+.[a-z]{0,4}$/;
+        var valid = emailRegex.test($('#Email').val());
+        if ($('#Email').val() !== "" && $('#Password').val() !== "" && (valid)) {
+            $('.progress').show();
+        } 
+    });
+</script>
