--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -1,29 +1,27 @@
 ﻿@model IEnumerable<MyWebsite.Models.BudgetApp.BudgetItems>
 
-@{  
-    var user = User.Identity.Name;
-    var budgetMonth = DateTime.Now.Month;
-}
+
 <div class="partialLoginText"><p>@Html.Partial("_LoginPartial", 1)</p></div>
-<h3 class="painlessBudgetTitle">The Painless Budget</h3>
+<h4 class="painlessBudgetTitle">The Painless Budget</h4>
 
 <div class="container">
-    <div style="margin-top: 25px; text-align: center;">
+    <div style="margin-top: 35px; text-align: center;">
         <h6 class="greenCenterTxt">@ViewBag.Deleted</h6>
-        <a href='@Url.Action("Index", "Budgets")'; class="waves-effect waves-light btn-large underline-hover grey darken-4" style="font-weight: bold; font-size: 20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+        <a href='@Url.Action("Index", "Budgets")'; class="waves-effect waves-light btn-large greyBudgetBtn"><i class="far fa-arrow-alt-circle-left" style="margin-right: 5px;"></i> Return to Budget</a>
     </div>
 
-    <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; text-align:center">Add Transaction</h4>
+    <h4 style="margin: 40px; text-align:center"><i class="fas fa-plus"  style="margin-right: 5px;"></i> Add Transaction</h4>
 
     @*Validation Errors*@
     <div class="container" style="margin-top:20px;">
         <h6 style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.Error</h6>
         <h6 class="greenCenterTxt">@ViewBag.SuccessTransactionAdded</h6>
     </div>
+
     <div class="row">
         <div class="col s12 m12 l4"></div>
-        <form asp-action="AddTransaction" class="col s12 m12 l4 center z-depth-2" style="border: 1px dotted #cfd8dc">
-            <div class="input-field col s12" style="margin-bottom:35px; margin-top:35px;">
+        <form asp-action="AddTransaction" class="col s12 m12 l4 center z-depth-5">
+            <div class="input-field">
                 <select name="TypeOfBudget">
                     <option value="0" disabled selected>1. Select a Category</option>
                     <option value="1">Grocery</option>
@@ -54,33 +52,33 @@
 
 @*View Transactions*@
 <div class="container center" style="margin-top:35px; margin-bottom:250px;">
-    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Transactions</h5>
+    <h4 style="margin-top:55px; margin-bottom:25px; text-align:center"><i class="fas fa-money-check-alt" style="margin-right: 5px;"></i> View Past Transactions</h4>
     <a class="waves-effect waves-light underline-hover btn-large grey darken-4" id="transaction-btnG" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_dining</i>Grocery</a>
-        <table class="table" id="transactionsG" align="center" style="display:none; width:25%; margin-bottom:25px;">
+    <table class="table" id="transactionsG" align="center" style="display:none; width:25%; margin-bottom:25px;">
+        <tr style="border-bottom: 1px dotted #cfd8dc">
+            <th>Date</th>
+            <th>Description</th>
+            <th>Price</th>
+            <th></th>
+        </tr>
+        @{ int count = 0;}
+        @foreach (var item in Model.Where(x => Convert.ToInt32(x.TypeOfBudget) == 1).OrderBy(x => x.Date))
+        {
+            count += 1;
             <tr style="border-bottom: 1px dotted #cfd8dc">
-                <th>Date</th>
-                <th>Description</th>
-                <th>Price</th>
-                <th></th>
+                <td>@item.Date.ToString("MM/dd/yyyy")</td>
+                <td>@item.Description</td>
+                <td>$@item.Cost</td>
+                <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId, returnTo = "AddTransaction" })'><i class="material-icons left trashcan-icon">delete</i></a></td>
+            </tr>            
+        }
+        @if (count == 0)
+        {
+            <tr>
+                <th>No Transactions...</th>
             </tr>
-            @{ int count = 0;}
-            @foreach (var item in Model.Where(x => Convert.ToInt32(x.TypeOfBudget) == 1).OrderBy(x => x.Date))
-            {
-                count += 1;
-                <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
-                    <td>@item.Description</td>
-                    <td>$@item.Cost</td>
-                    <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId, returnTo = "AddTransaction" })'><i class="material-icons left trashcan-icon">delete</i></a></td>
-                </tr>            
-            }
-            @if (count == 0)
-            {
-                <tr>
-                    <th>No Transactions...</th>
-                </tr>
-            }
-        </table>
+        }
+    </table>
     <a class="waves-effect waves-light underline-hover btn-large grey darken-4" id="transaction-btnH" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">home</i>Housing</a>
     <table class="table" id="transactionsH" align="center" style="display:none; width:25%; margin-bottom:25px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
@@ -216,6 +214,48 @@
         }
     </table>
 </div>
+
+
+<style>
+    .dropdown-content li > a, .dropdown-content li > span {
+        color: #cfd8dc !important;
+        font-size: 20px !important;
+        font-weight: bold;
+        text-align: center;
+        background-color: #020305 !important;
+    }
+
+    .dropdown-content li > a, .dropdown-content li > span:hover {
+        background-color: #cfd8dc !important;
+        color: #263238 !important;
+    }
+
+    .select-dropdown li.disabled, .select-dropdown li.disabled > span, .select-dropdown li.optgroup {
+        color: #080C10 !important;
+        font-weight: bold;
+        text-align: center;
+    }
+
+    .select-wrapper input.select-dropdown {
+        border-bottom: none !important;
+    }
+
+    .select-wrapper input.select-dropdown {
+        background-color: #37474f !important;
+        font-weight: 600 !important;
+        font-size: 25px !important;
+        text-align: center;
+        padding-top: 5px !important;
+        border-radius: 0 !important;
+        color: #cfd8dc !important;
+    }
+
+    .select-wrapper input.select-dropdown:hover {
+        background-color: #020305 !important;
+        color: #cfd8dc !important;
+        text-decoration: underline #54b798;
+    }
+</style>
 
 <script>
     $(document).ready(function () {
