--- a/MyWebsite/Views/OpenWeather/Index.cshtml
+++ b/MyWebsite/Views/OpenWeather/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-<div id="particles-js-snow"></div>
+@*<div id="particles-js-snow"></div>*@
 <div id="email" style="display:none">@User.Identity.Name</div>
 <div id="previouslySelectedCity" style="display:none">@ViewBag.City</div>
 
-<div style="text-align:center; margin-top:100px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 2) </p></div>
+<div style="text-align:center;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 2) </p></div>
 @*Current weather card*@
-<div id="weatherResponse" style="color: black; width: 40%; display: none; margin-left: 10px; margin-top: -35px; float:left"></div>
+<div id="weatherResponse" style="color: black; width: 40%; display: none; margin-left: 10px; margin-top: 15px; float:left"></div>
 <h3 id="weatherApp" style="text-align:center; color:black; font-weight: bold; margin-top:100px;">Weather App</h3>
 
 @*7 Day Forecast / Manage UserWeatherPreferences Alerts BTNS*@
